--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx tsc",
+    "devstart": "nodemon dist/server.js",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +15,11 @@
   "dependencies": {
     "@opensearch-project/opensearch": "^2.3.1",
     "@types/express": "^4.17.17",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "typescript": "^5.1.6"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
