--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "@opensearch-project/opensearch": "^2.3.1",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "typescript": "^5.1.6"
