--- a/frontend/package.json
+++ b/frontend/package.json
@@ -98,7 +98,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc && robocopy src\\public dist\\public /s",
+    "build": "npx tsc && cp src/public dist/public /s",
     "start": "node dist/server.js"
   },
   "keywords": [],
