--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
     "@types/node": "^20.5.1",
+    "@types/passport": "^1.0.12",
+    "@types/passport-google-oauth20": "^2.0.11",
     "abbrev": "^1.1.1",
     "accepts": "^1.3.8",
     "anymatch": "^3.1.3",
@@ -33,6 +36,7 @@
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "fill-range": "^7.0.1",
     "finalhandler": "^1.2.0",
     "forwarded": "^0.2.0",
@@ -72,6 +76,8 @@
     "object-inspect": "^1.12.3",
     "on-finished": "^2.4.1",
     "parseurl": "^1.3.3",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "path-to-regexp": "^0.1.7",
     "picomatch": "^2.3.1",
     "proxy-addr": "^2.0.7",
